--- a/Source/SCIT1thProject/src/View/Calendar.fxml
+++ b/Source/SCIT1thProject/src/View/Calendar.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -21,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
+<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
    <children>
       <GridPane fx:id="gridPane" gridLinesVisible="true" layoutY="25.0" prefHeight="625.0" prefWidth="875.0" style="-fx-background-color: white; -fx-border-color: black;">
         <columnConstraints>
@@ -983,56 +977,57 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Button fx:id="monthAfter" layoutX="1121.0" layoutY="120.0" mnemonicParsing="false" text="&gt;&gt;" />
-      <Button fx:id="yearAfter" layoutX="1121.0" layoutY="80.0" mnemonicParsing="false" text="&gt;&gt;" />
-      <Button fx:id="yearBefore" layoutX="924.0" layoutY="80.0" mnemonicParsing="false" text="&lt;&lt;" />
-      <Button fx:id="monthBefore" layoutX="924.0" layoutY="120.0" mnemonicParsing="false" text="&lt;&lt;" />
-      <Label fx:id="year" alignment="CENTER" layoutX="957.0" layoutY="80.0" prefHeight="32.0" prefWidth="136.0">
+      <Button fx:id="monthAfter" layoutX="1121.0" layoutY="87.0" mnemonicParsing="false" text="&gt;&gt;" />
+      <Button fx:id="yearAfter" layoutX="1121.0" layoutY="47.0" mnemonicParsing="false" text="&gt;&gt;" />
+      <Button fx:id="yearBefore" layoutX="924.0" layoutY="47.0" mnemonicParsing="false" text="&lt;&lt;" />
+      <Button fx:id="monthBefore" layoutX="924.0" layoutY="87.0" mnemonicParsing="false" text="&lt;&lt;" />
+      <Label fx:id="year" alignment="CENTER" layoutX="957.0" layoutY="47.0" prefHeight="32.0" prefWidth="136.0">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="month" alignment="CENTER" layoutX="957.0" layoutY="120.0" prefHeight="32.0" prefWidth="136.0">
+      <Label fx:id="month" alignment="CENTER" layoutX="957.0" layoutY="87.0" prefHeight="32.0" prefWidth="136.0">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="1064.0" layoutY="80.0" text="년">
+      <Label layoutX="1064.0" layoutY="47.0" text="년">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="1064.0" layoutY="120.0" text="월">
+      <Label layoutX="1064.0" layoutY="87.0" text="월">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="insertSchedule" layoutX="908.0" layoutY="556.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="스케줄 추가">
+      <Button fx:id="insertSchedule" layoutX="912.0" layoutY="523.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="스케줄 추가">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <Button fx:id="insertMemo" layoutX="908.0" layoutY="597.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="메모 추가">
+      <Button fx:id="insertMemo" layoutX="912.0" layoutY="564.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="메모 추가">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <ListView fx:id="contentListView" layoutX="907.0" layoutY="181.0" prefHeight="363.0" prefWidth="262.0" />
-      <Label fx:id="contentLabel" alignment="CENTER" layoutX="907.0" layoutY="151.0" prefHeight="30.0" prefWidth="262.0">
+      <ListView fx:id="contentListView" layoutX="907.0" layoutY="149.0" prefHeight="363.0" prefWidth="262.0" />
+      <Label fx:id="contentLabel" alignment="CENTER" layoutX="907.0" layoutY="119.0" prefHeight="30.0" prefWidth="262.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="deleteButton" layoutX="1051.0" layoutY="597.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="삭제">
+      <Button fx:id="deleteButton" layoutX="1055.0" layoutY="564.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="삭제">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <Button layoutX="901.0" layoutY="40.0" mnemonicParsing="false" onAction="#btnOnHH" prefHeight="32.0" prefWidth="276.0" text="가계부 열기" />
-      <Button fx:id="insertTodo" layoutX="1051.0" layoutY="556.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="일정 추가">
+      <Button layoutX="912.0" layoutY="606.0" mnemonicParsing="false" onAction="#btnOnHH" prefHeight="30.0" prefWidth="110.0" text="가계부 열기" />
+      <Button fx:id="insertTodo" layoutX="1055.0" layoutY="523.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="일정 추가">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
+      <Button fx:id="openWeather" layoutX="1055.0" layoutY="606.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="오늘 날씨" />
    </children>
 </AnchorPane>
