--- a/Source/SCIT1thProject/src/View/FindAddress.fxml
+++ b/Source/SCIT1thProject/src/View/FindAddress.fxml
@@ -20,30 +20,11 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="128.0" prefWidth="398.0">
                <children>
-                  <MenuBar layoutX="-1.0" prefHeight="25.0" prefWidth="600.0">
-                    <menus>
-                      <Menu mnemonicParsing="false" text="File">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Close" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Edit">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Delete" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Help">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="About" />
-                        </items>
-                      </Menu>
-                    </menus>
-                  </MenuBar>
                   <TextField fx:id="Input_address2" layoutX="87.0" layoutY="39.0" prefHeight="23.0" prefWidth="371.0" />
                   <Label layoutX="14.0" layoutY="43.0" prefHeight="15.0" prefWidth="64.0" text="현주소" />
                   <Button fx:id="Chk_address_btn" layoutX="469.0" layoutY="39.0" mnemonicParsing="false" onAction="#Click_find_add" prefHeight="23.0" prefWidth="96.0" text="주소검색" />
                   <Button fx:id="Input_add_btn" layoutX="469.0" layoutY="73.0" mnemonicParsing="false" onAction="#addressInput" prefHeight="23.0" prefWidth="96.0" text="주소입력" />
-                  <Label fx:id="resultLabel" layoutX="87.0" layoutY="73.0" prefHeight="23.0" prefWidth="371.0" />
+                  <Label fx:id="resultLabel" layoutX="87.0" layoutY="64.0" prefHeight="23.0" prefWidth="371.0" text="- 시/ 군/구/동/읍/면/리 단위로 검색 해주세요." />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="461.0" prefWidth="398.0">
                <children>
