--- a/Source/SCIT1thProject/src/View/Help.fxml
+++ b/Source/SCIT1thProject/src/View/Help.fxml
@@ -9,7 +9,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HelpController">
    <children>
       <Label layoutX="34.0" layoutY="166.0" prefHeight="17.0" prefWidth="231.0" text="- 문의사항 : chlrbghdla@naver.com" />
-      <Label layoutX="34.0" layoutY="207.0" prefHeight="17.0" prefWidth="231.0" text="- 케치데모 다이죠부 대표 :  이재만" />
+      <Label layoutX="34.0" layoutY="207.0" prefHeight="17.0" prefWidth="231.0" text="- 케치데모 다이죠부 대표 :  이재만" textFill="#250b0b" />
       <Label layoutX="34.0" layoutY="242.0" text="- Thanks to 전상수" />
       <Label layoutX="34.0" layoutY="63.0" text="'케치데모 다이죠부'를 ">
          <font>
