--- a/Source/SCIT1thProject/src/View/FindAddress2.fxml
+++ b/Source/SCIT1thProject/src/View/FindAddress2.fxml
@@ -24,7 +24,7 @@
                   <Label layoutX="14.0" layoutY="43.0" prefHeight="15.0" prefWidth="64.0" text="현주소" />
                   <Button fx:id="Chk_address_btn" layoutX="469.0" layoutY="39.0" mnemonicParsing="false" onAction="#Click_find_add" prefHeight="23.0" prefWidth="96.0" text="주소검색" />
                   <Button fx:id="Input_add_btn" layoutX="469.0" layoutY="73.0" mnemonicParsing="false" onAction="#addressInput" prefHeight="23.0" prefWidth="96.0" text="주소입력" />
-                  <Label fx:id="resultLabel" layoutX="87.0" layoutY="65.0" prefHeight="23.0" prefWidth="371.0" text="- 시/ 군/구/동/읍/면/리 단위로 검색 해주세요." />
+                  <Label fx:id="resultLabel" layoutX="87.0" layoutY="65.0" prefHeight="23.0" prefWidth="371.0" text="- 도로명 주소 혹은 동/읍 으로 검색해주세요." />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="461.0" prefWidth="398.0">
                <children>
