--- a/Source/SCIT1thProject/bin/View/Home.fxml
+++ b/Source/SCIT1thProject/bin/View/Home.fxml
@@ -9,9 +9,9 @@
 
 <AnchorPane fx:id="mPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HomeController">
    <children>
-      <ImageView fx:id="imageback" fitHeight="420.0" fitWidth="629.0" layoutX="-16.0" layoutY="-7.0">
+      <ImageView fitHeight="400.0" fitWidth="600.0">
          <image>
-            <Image url="@../../bin/Image/backImage.jpg" />
+            <Image url="@../../../../../../backimg.jpg" />
          </image>
       </ImageView>
       <MenuBar prefHeight="38.0" prefWidth="600.0">
